Update 002 template & make production files inside repository

--- a/build_production/templates/002/index.html
+++ b/build_production/templates/002/index.html
@@ -1,7 +1,13 @@
-@extends('_layouts.master')
-
-@section('body')
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <link rel="stylesheet" href="/assets/build/css/main.css">
+    </head>
+    <body>
+        
 <div class="bg-orange-600 flex justify-between py-12 px-12">
     <div class="w-1/2">
         <h1 class="text-white font-bold text-5xl">Ninja Sample</h1>
@@ -133,4 +139,5 @@
     </div>
 </div>
 
-@endsection
+    </body>
+</html>
