--- a/build_production/templates/007/index.html
+++ b/build_production/templates/007/index.html
@@ -8,59 +8,71 @@
     </head>
     <body>
         
-<div class="p-16">
-    <div class="flex justify-center border-b-4 border-black">
+<div class="py-16 px-8">
+    <div class="flex flex justify-between border-b-4 border-black">
         <img src="/assets/images/invoiceninja-logo.png" alt="Company logo" class="w-40 pb-6">
+        <div class="flex">
+            <div class="flex flex-col mr-5">
+                <span>Invoice Number</span>
+                <span>Invoice Date</span>
+                <span>Due Date</span>
+                <span>Balance Due</span>
+            </div>
+            <div class="flex flex-col text-right">
+                <span class="font-semibold" id="invoice.number">00984</span>
+                <span id="invoice.date">Sep 8, 2014</span>
+                <span id="due.date">Nov 9, 2014</span>
+                <span id="balance.due">$1,838.80</span>
+            </div>
+        </div>
     </div>
     <div class="p-px border-b border-black mt-1"></div>
-    <div class="flex justify-between mt-8">
-        <div class="w-2/3">
+    <!-- <div class="flex justify-between mt-8">
+        <div class="w-1/2 bg-red-300">
             <h2 class="text-2xl">Balance Due</h2>
             <div class="flex mt-4">
                 <div class="flex flex-col">
-                    <p class="font-semibold">Winterfield Medical Supply</p>
-                    <p>65 Medical Complex Rd., D98</p>
-                    <p>Atlanta, GA 22546</p>
-                    <p>United States</p>
-                    <p>demo@invoiceninja.com</p>
+                    <span class="font-semibold">Winterfield Medical Supply</span>
+                    <span>65 Medical Complex Rd., D98</span>
+                    <span>Atlanta, GA 22546</span>
+                    <span>United States</span>
+                    <span>demo@invoiceninja.com</span>
                 </div>
                 <div class="flex ml-6 pl-4 border-dashed border-l border-black">
-                    <div class="flex flex-col">
-                        <p>Ninja Sample</p>
-                        <p>Contact@InvoiceNinja.com</p>
-                        <p>1-800-555-Ninja</p>
+                    <div class="flex mr-5 bg-red-100 flex-col">
+                        <span>Ninja Sample</span>
+                        <span>Contact@InvoiceNinja.com</span>
+                        <span>1-800-555-Ninja</span>
                     </div>
-                    <div class="flex flex-col ml-5">
-                        <p>123 Ninja Blvd.</p>
-                        <p>NinjaLand, 97315</p>
-                        <p>United States</p>
+                    <div class="flex flex-col w-full bg-red-100">
+                        <span>123 Ninja Blvd.</span>
+                        <span>NinjaLand, 97315</span>
+                        <span>United States</span>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="mr-8">
-            <h2 class="text-2xl">Details:</h2>
-            <div class="flex flex-col mt-4">
-                <section class="flex justify-between text-left">
-                    <span>Invoice Number</span>
-                    <span class="ml-16 font-semibold">20802</span>
-                </section>
-                <section class="flex justify-between text-left">
-                    <span>Invoice Date</span>
-                    <span class="ml-16">Sep 6, 2014</span>
-                </section>
-                <section class="flex justify-between text-left">
-                    <span>Due Date</span>
-                    <span class="ml-16">Sep 6, 2014</span>
-                </section>
-                <section class="flex justify-between text-left">
-                    <span>Balance Due</span>
-                    <span class="ml-16">$4,518.00</span>
-                </section>
-            </div>
+    </div> -->
+    <div class="flex mt-8">
+        <div class="w-1/3 mr-6 flex flex-col pr-2 border-r border-dashed border-black">
+            <span class="font-semibold">Winterfield Medical Supply</span>
+            <span>65 Medical Complex Rd., D98</span>
+            <span>Atlanta, GA 22546</span>
+            <span>United States</span>
+            <span>demo@invoiceninja.com</span>
+        </div>
+        <div class="flex flex-col mr-6">
+            <span>Ninja Sample</span>
+            <span>Contact@InvoiceNinja.com</span>
+            <span>1-800-555-Ninja</span>
+        </div>
+        <div class="flex flex-col">
+            <span>123 Ninja Blvd.</span>
+            <span>NinjaLand, 97315</span>
+            <span>United States</span>
         </div>
     </div>
-    <table class="w-full table-auto my-20">
+    <table class="w-full table-auto mb-6 mt-16">
         <thead class="text-left border-dashed border-b border-black">
             <tr>
                 <th class="font-normal text-green-700 px-4 py-2">Item</th>
@@ -99,37 +111,46 @@
                 <td ref="quantity" class="text-right px-4 py-4">1</td>
                 <td ref="line.total" class="text-orange-700 text-right px-4 py-4">$170.00</td>
             </tr>
-            <tr>
-                <td colspan="3" ref="note" class="px-4 py-4">Passed Car Inspection. Vehicle overall in good condition. <br> Return for tune up for 10 months to 1 year.</td>
-                <td ref="quantity" class="px-4 py-4">
-                    <p>Subtotal</p>
-                    <p>Discount 5%</p>
-                    <p>Paid to Date</p>
-                </td>
-                <td ref="line.total" class="px-4 py-4 text-right">
-                    <p>$1,161.00</p>
-                    <p>$58.05</p>
-                    <p>$0.00</p>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="5" ref="terms" class="px-4 py-4">
-                    <p ref="terms" class="font-semibold">Terms</p>
-                    <p>All repairs guaranteed for up to 6 months. Please call us with <br> any questions or concerns regarding repairs or any other issues.</p>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="3" ref="terms" class="px-4 py-4"></td>
-                <td ref="terms" class="px-4 py-3 text-right border-dashed border-black border-t border-b">
-                    <span class="text-green-700">Balance Due</span>
-                </td>
-                <td ref="terms" class="px-4 py-3 text-right border-dashed border-black border-t border-b">
-                    <span class="text-green-700">$3,060.00</span>
-                </td>
-            </tr>
         </tbody>
     </table>
-    <div class="flex justify-center border-b-4 border-black">
+
+    <div class="flex items-center justify-between mt-2 px-4 pb-4">
+        <div class="w-1/2">
+            <div class="flex flex-col">
+                <p>Wedding photos will be available approximately 1 month after the wedding date. Thank you for your patience!</p>
+            </div>
+        </div>
+        <div class="w-1/3 flex flex-col">
+            <div class="flex px-3 mt-2">
+                <section class="w-1/2 text-right flex flex-col">
+                    <span>Subtotal</span>
+                    <span>Discount</span>
+                    <span>Paid To Date</span>
+                </section>
+                <section class="w-1/2 text-right flex flex-col">
+                    <span>$0</span>
+                    <span>$0</span>
+                    <span>$0</span>
+                </section>
+            </div>
+        </div>
+    </div>
+    <div class="flex items-center justify-between mt-4 pb-4 px-4">
+        <div class="w-1/2">
+            <div class="flex flex-col">
+                <p class="font-semibold">Terms</p>
+                <p>Wedding photos will be available approximately 1 month after the wedding date. Thank you for your patience!</p>
+            </div>
+        </div>
+        <div class="flex w-2/5 flex-col">
+            <section class="flex py-2 text-green-700 border-t border-b border-dashed border-black px-2 mt-1">
+                <p class="w-1/2">Balance Due</p>
+                <p class="text-right w-1/2">$0.00</p>
+            </section>
+        </div>
+    </div>
+    
+    <div class="flex justify-center border-b-4 border-black mt-6">
         <h4 class="text-2xl font-semibold mb-4">Thanks</h4>
     </div>
     <div class="p-px border-b border-black mt-1"></div>
