--- a/build_production/templates/009/index.html
+++ b/build_production/templates/009/index.html
@@ -11,57 +11,47 @@
 <div class="py-16 mx-16">
     <div class="flex justify-between">
         <div class="w-2/3 flex">
-            <div>
-                <p class="font-semibold">Berg Builders Inc.</p>
-                <p>987 Conway Blvd.</p>
-                <p>Los Angeles, California 90210</p>
-                <p>United States</p>
-                <p>demo@invoiceninja.com</p>
-            </div>
-            <div class="ml-6">
-                <p>Ninja Sample</p>
-                <p>Contact@InvoiceNinja.com</p>
-                <p>1-800-555-Ninja</p>
-            </div>
-            <div class="ml-6">
-                <p>123 Ninja Blvd.</p>
-                <p>NinjaLand, 97315</p>
-                <p>United States</p>
-            </div>
-        </div>
-        <img src="/assets/images/invoiceninja-logo.png" alt="Company logo" class="h-24 ml-2">
-    </div>
-    <div class="flex mt-8">
-        <div class="w-2/3 flex">
-            <h1 class="text-6xl uppercase font-semibold">Invoice</h1>
-            <i class="ml-4 text-6xl text-pink-700">#1564</i>
-        </div>
-        <div class="w-1/3">
             <div class="flex flex-col">
-                <section class="flex">
-                    <span class="w-1/2 mr-2">Invoice Number</span>
-                    <span class="font-semibold">20802</span>
-                </section>
-                <section class="flex">
-                    <span class="w-1/2 mr-2">PO Number</span>
-                    <span>654B</span>
-                </section>
-                <section class="flex">
-                    <span class="w-1/2 mr-2">Invoice Date</span>
-                    <span>Sep 6, 2014</span>
-                </section>
-                <section class="flex">
-                    <span class="w-1/2 mr-2">Due Date</span>
-                    <span>Sep 6, 2014</span>
-                </section>
-                <section class="flex">
-                    <span class="w-1/2 mr-2">Balance Due</span>
-                    <span>$4,518.00</span>
-                </section>
+                <span class="font-semibold">Berg Builders Inc.</span>
+                <span>987 Conway Blvd.</span>
+                <span>Los Angeles, California 90210</span>
+                <span>United States</span>
+                <span>demo@invoiceninja.com</span>
+            </div>
+            <div class="ml-6 flex flex-col">
+                <span>Ninja Sample</span>
+                <span>Contact@InvoiceNinja.com</span>
+                <span>1-800-555-Ninja</span>
+            </div>
+            <div class="ml-6 flex flex-col">
+                <span>123 Ninja Blvd.</span>
+                <span>NinjaLand, 97315</span>
+                <span>United States</span>
+            </div>
+        </div>
+        <img src="/assets/images/invoiceninja-logo.png" alt="Company logo" class="h-24">
+    </div>
+    <div class="flex justify-between mt-8">
+        <div class="w-2/3 flex">
+            <h1 class="text-5xl uppercase font-semibold">Invoice</h1>
+            <i class="ml-4 text-5xl text-pink-700">#1564</i>
+        </div>
+        <div class="flex">
+            <div class="flex justify-between flex-col">
+                <span>Invoice Number</span>
+                <span>Invoice Date</span>
+                <span>Due Date</span>
+                <span>Balance Due</span>
+            </div>
+            <div class="flex flex-col text-right">
+                <span class="font-semibold" id="invoice.number">00984</span>
+                <span id="invoice.date">Sep 8, 2014</span>
+                <span id="due.date">Nov 9, 2014</span>
+                <span id="balance.due">$1,838.80</span>
             </div>
         </div>
     </div>
-    <table class="w-full table-auto mt-20 border-t-4 border-b-4 border-pink-700 bg-white">
+    <table class="w-full table-auto mt-12 border-t-4 border-pink-700 bg-white">
         <thead class="text-left rounded-lg">
             <tr>
                 <th class="font-medium uppercase text-pink-700 text-xl px-4 py-5">Item</th>
@@ -100,7 +90,7 @@
                 <td ref="quantity" class="text-right px-4 py-4">1</td>
                 <td ref="line.total" class="text-right px-4 py-4">$170.00</td>
             </tr>
-            <tr>
+            <!-- <tr>
                 <td colspan="3" ref="note" class="px-4 py-4">Thank you for choosing Berg Builders.</td>
                 <td ref="quantity" class="px-4 py-4">
                     <p>Subtotal</p>
@@ -116,9 +106,41 @@
                     <p ref="terms" class="font-semibold">Terms</p>
                     <p>N 21</p>
                 </td>
-            </tr>
+            </tr> -->
         </tbody>
     </table>
+
+    <div class="border-b-4 border-pink-700">
+        <div class="flex items-center justify-between mt-2 px-4 pb-4">
+            <div class="w-1/2">
+                <div class="flex flex-col">
+                    <p>Wedding photos will be available approximately 1 month after the wedding date. Thank you for your patience!</p>
+                </div>
+            </div>
+            <div class="w-1/3 flex flex-col">
+                <div class="flex px-3 mt-2">
+                    <section class="w-1/2 text-right flex flex-col">
+                        <span>Subtotal</span>
+                        <span>Discount</span>
+                        <span>Paid To Date</span>
+                    </section>
+                    <section class="w-1/2 text-right flex flex-col">
+                        <span>$0</span>
+                        <span>$0</span>
+                        <span>$0</span>
+                    </section>
+                </div>
+            </div>
+        </div>
+        <div class="flex items-center justify-between mt-4 pb-4 px-4">
+            <div class="w-1/2">
+                <div class="flex flex-col">
+                    <p class="font-semibold">Terms</p>
+                    <p>N21</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="w-full flex justify-end mt-4">
         <p>Balance Due</p>
         <p class="ml-8 text-pink-700 font-semibold">$5,280.00</p>
